[package]
name = "eos-voxel-renderer"
version = "0.1.0"
authors = ["Liverwurst Nova <thesupremeliverwurst@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
parking_lot = { version = "0.11.1" }
ron = { version = "0.6.4" }
serde = { version = "1.0.77", features = ["derive"] }

#path dependencies
eos-macros = { path = "../../../eos-macros" }
eos-use = { path = "../../../eos-use" }
